class name cleanup

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <body>
     <header>
-        <div class="hs-btn-container">
+        <div class="h-btn-container">
             <!-- High Scores Link -->
-            <button class="hs-btn">View high scores</button>
+            <button class="h-btn">View high scores</button>
         </div>
         <div class="h-default-text">
             <!-- Time Keeper -->
@@ -26,7 +26,7 @@
                 Coding Quiz Challenge <br>
                 Coding!
             </div>
-            <div class="hs">
+            <div class="hs-content">
                 <div class="hs-text">
                     Your final score is <span></span>.
                 </div>
