added loadGame function and questions array

--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
             <!-- High Scores Link -->
             <button class="h-btn">View high scores</button>
         </div>
-        <div class="h-default-text">
+        <div class="h-default-text" id ="time-keeper">
             <!-- Time Keeper -->
-            Time:
         </div>
     </header>
     <main>
         <div class="content-holder">
-            <div class="bold-text">
-                <!-- Question Text -->
+            <!-- <div class="bold-text">
+                Question Text
                 Coding Quiz Challenge <br>
                 Coding!
             </div>
@@ -42,7 +41,7 @@
                 Keep in mind that incorrect answers will penalize your score/time by ten seconds!
             </div>
             <div class="answer-container">
-                <!-- Answer buttons -->
+                Answer buttons
                 <div class="btn-container">
                     <button class="btn">Start Quiz</button>
                 </div>
@@ -54,10 +53,10 @@
                 </div>
             </div>
             <div class="torf-text">
-                <!-- Answer True/False -->
+                Answer True/False
                 abcdefg
             </div>
-            <div class="hs-container">asdf</div>
+            <div class="hs-container">asdf</div> -->
         </div>
     </main>
 
