added keepTime function, delete contentHolder html on quiz start

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
     </header>
     <main>
-        <div class="content-holder">
+        <div class="content-holder" id="center">
             <!-- <div class="bold-text">
                 Question Text
                 Coding Quiz Challenge <br>
