--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
     </header>
     <main>
-        <div class="content-holder" id="center">
+        <div class="content-holder" id="ccenter">
             <!-- <div class="bold-text">
                 Question Text
                 Coding Quiz Challenge <br>
