endGame function, saveScore function, highScores function

--- a/index.html
+++ b/index.html
@@ -19,43 +19,9 @@
         </div>
     </header>
     <main>
-        <div class="content-holder" id="center">
-            <!-- <div class="bold-text">
-                Question Text
-                Coding Quiz Challenge <br>
-                Coding!
-            </div>
-            <div class="hs-content">
-                <div class="hs-text">
-                    Your final score is <span></span>.
-                </div>
-                <div class="hs-text">
-                    Enter initials:
-                    <form class="hs-form">
-                        <input type="text"><input class="btn" type="submit" value="Submit">
-                    </form>
-                </div>
-            </div>
-            <div class="default-text">
-                Try to answer the following code-related questions within the time limit. <br>
-                Keep in mind that incorrect answers will penalize your score/time by ten seconds!
-            </div>
-            <div class="answer-container">
-                Answer buttons
-                <div class="btn-container">
-                    <button class="btn">Start Quiz</button>
-                </div>
-                <div class="btn-container">
-                    <button class="btn">Start Quiz</button>
-                </div>
-                <div class="btn-container">
-                    <button class="btn">Start Quiz</button>
-                </div>
-            </div>
-            <div class="torf-text">
-                Answer True/False
-                abcdefg
-            </div>
+        <div class="content-holder">
+            <!--
+
             <div class="hs-container">asdf</div> -->
         </div>
     </main>
